changed style, big change

--- a/client/TODO
+++ b/client/TODO
@@ -1,3 +1,13 @@
+When spree close
+	Admin Click spree name to see full list of items from this spree. 
+	Big table with admin remarks and status checkbox
+
+User Statistics
+Per Spree Download CSV Report
+Weight for each item/order
+
+
+
 - check out. all the payment and status viewing.
  currently it will be shown at the individual page. what if i want to buy across brands?
 
